# bazelify

./: .bazelrc  .gitignore  .ruff.toml  BUILD  BUILD.bazel  Cargo.toml  README.md  WORKSPACE  gazelle_python.yaml  go.mod  requirements.txt  rust-project.json
.trunk/: trunk.yaml
cargo/: crates.bzl
cargo/remote/: BUILD.regex-1.8.4.bazel  BUILD.regex-syntax-0.7.2.bazel
go/venv_generator/: venv_generator.go
modules/: MODULE.bazel
python/: BUILD  BUILD.bazel  requirements.txt  test.py
python/claude/: BUILD  __main__.py  claude.py
python/document_processing/: BUILD.bazel  document_processing.py
python/gmail/: BUILD  BUILD.bazel  __main__.py
rust/: BUILD.bazel  Cargo.toml
rust/pdf-helper/: BUILD  Cargo.toml  pdf-helper.rs
tools/: generate_python_build_files.sh  python  rust_analyzer.sh  update_python_deps.sh
