# module(
#     name = "bazelify",
#     version = "0.0.1",
# )

# bazel_dep(name = "aspect_bazel_lib", version = "1.30.2")
# bazel_dep(name = "bazel-zig-cc", version = "1.0.1")

# bazel_dep(name = "rules_python", version = "0.21.0")

# # You do not have to use pip for the toolchain, but most people
# # will use it for the dependency management.
# pip = use_extension("@rules_python//python:extensions.bzl", "pip")

# pip.parse(
#     name = "pip",
#     requirements_lock = "//:requirements.lock",
# )

# use_repo(pip, "pip")

# # Register a specific python toolchain instead of using the host version
# python = use_extension("@rules_python//python:extensions.bzl", "python")

# use_repo(python, "python3_10_toolchains")

# register_toolchains(
#     "@python3_10_toolchains//:all",
# )

# bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)